--- a/rag_algorithms.ipynb
+++ b/rag_algorithms.ipynb
@@ -322,62 +322,11 @@
    "source": [
     "response.response"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pip in c:\\users\\diana\\documents\\ww4t_11-24\\.venv\\lib\\site-packages (24.2)\n",
-      "Collecting pip\n",
-      "  Downloading pip-24.3.1-py3-none-any.whl.metadata (3.7 kB)\n",
-      "Downloading pip-24.3.1-py3-none-any.whl (1.8 MB)\n",
-      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
-      "   ----- ---------------------------------- 0.3/1.8 MB ? eta -:--:--\n",
-      "   ----------- ---------------------------- 0.5/1.8 MB 1.7 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 1.0/1.8 MB 1.6 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 1.3/1.8 MB 1.5 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 1.3/1.8 MB 1.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 1.6/1.8 MB 1.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.8/1.8 MB 1.3 MB/s eta 0:00:00\n",
-      "Installing collected packages: pip\n",
-      "  Attempting uninstall: pip\n",
-      "    Found existing installation: pip 24.2\n",
-      "    Uninstalling pip-24.2:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not install packages due to an OSError: [WinError 32] The process cannot access the file because it is being used by another process: 'c:\\\\users\\\\diana\\\\documents\\\\ww4t_11-24\\\\.venv\\\\scripts\\\\pip.exe'\n",
-      "Check the permissions.\n",
-      "\n",
-      "WARNING: There was an error checking the latest version of pip.\n"
-     ]
-    }
-   ],
-   "source": [
-    "! python.exe -m pip install --upgrade pip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install ragchecker"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
